--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,3 +6,15 @@ $font-weights: (
     "medium": 500,
     "bold": 700
 );
+$gutters: (
+    "x-small": 16px,
+    "small": 18px,
+    "regular": 24px,
+    "medium": 28px,
+    "large": 34px,
+    "x-large": 38px,
+);
+
+$s-mobile: 620px;
+$r-mobile: 820px;
+
